# servito

./: .dockerignore  Cargo.toml  Dockerfile
src/: config.rs  db.rs  main.rs  mp3.rs  scan.rs
