[package]
name = "servito"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
memchr = "2"
